--- a/projects/composer.json
+++ b/projects/composer.json
@@ -6,10 +6,17 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "bugsnag/bugsnag-laravel": "^2.0",
+        "cviebrock/eloquent-sluggable": "^10.0",
+        "doctrine/dbal": "^3.6",
         "guzzlehttp/guzzle": "^7.2",
+        "laravel/dusk": "^7.7",
         "laravel/framework": "^10.8",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "laravel/ui": "^4.2",
+        "spatie/laravel-medialibrary": "^10.9",
+        "yajra/laravel-datatables": "^10.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
